--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   firebase_core: ^1.23.0
   cloud_firestore: ^3.4.9
 
+  #for tast style
+  motion_toast: ^2.4.3
+
+  #for date and time
+  flutter_datetime_picker: ^1.5.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
