--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   #For Picking Date and Time
   flutter_datetime_picker: ^1.5.1
 
+
+  http: ^0.13.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
